fix tests refactor OfferService refactor caretaker and client builders to create collections by default add Cascade.Remove for offers and ratings for clients and caretakers